Debt/met 6074 technical debt (#680)
* MET-6074 General technical debt fixes

* MET-6074 General technical debt fixes

* MET-6074 General technical debt fixes

* MET-6074 Leftover issues

* MET-6074 Fix build

* MET-6074 Some more td